gtk+3.0 (3.24.10-1) UNRELEASED; urgency=medium

  * New upstream release
    - Bump required CUPS version to 1.7
    - d/copyright: Update
    - d/rules: Explicitly select Autotools build system.
      Upstream now partially supports Meson, but it doesn't have all the
      features we want yet (in particular no installed-tests).

 -- Simon McVittie <smcv@debian.org>  Wed, 17 Jul 2019 10:00:01 +0100

gtk+3.0 (3.24.8-1) experimental; urgency=medium

  * New upstream release
    + Color editor: don't warn if editing is cancelled
    + Always redraw on allocate - not doing so is not safe when any widget can
      have a background
    + Use GLSL 3.30 for shaders
    + Wayland: properly place window menus
    + GtkApplication: support session state changes in sandboxes, using the
      inhibit portal
    + Fix a problem with autostart notification
    + Places: Show loop devices as reported by gvfs
    + Print dialog, CUPS: Check unknown option values whether they are
      actually custom settings (LP: #1763520)
  * Refresh patches. debian/patches/018_gdkenumtypes.c_location.patch needed
    slight rebasing

 -- Iain Lane <laney@debian.org>  Thu, 11 Apr 2019 11:08:50 +0100

gtk+3.0 (3.24.7-1) experimental; urgency=medium

  * New upstream release
    + Broadway: Ensure focus on click
    + Fix some compiler warnings
    + Improve activation of the onscreen keyboard
    + Improve menu positioning with move-to-rect
    + Link against fribidi
    + Treeview: Make sure separator nodes have height > 0
    + Use C locale when generating code
    + theme
      - Fix some inconsistences for radii
  * control: BD and D (from libgtk-3-dev) on fribidi as required now
  * Refresh patches & drop upstream ones.
     debian/patches/Revert-Update-a11y-test-output.patch,
     debian/patches/Update-css-node-tests.patch: Dropped, now upstream.
  * control: BD on fonts-cantarell and fonts-dejavu. These are required for
    the reftests. Liberation doesn't work (label-shadows fails).